--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     build: 
       context: ./
       dockerfile: Dockerfile
+    volumes:
+      - ./:/we_go_trip/
     ports:
       - 8000:8000
     env_file:
       - ./.env
+    
